# roosycozy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: engine.ts  engine_rust.ts  main.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: advisor.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/engine/: mod.rs
src/main/: app.ts  paper.ts  state.ts  views.ts
src/main/backup/: views_backup.ts
src/ui/: sample_pack_v7.json
