[package]
name = "roosycozy"
version = "0.2.0"
description = "roosycozy - 한 줄 기록 → 케이스 타임라인"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
genpdf = "0.2"
dirs-next = "2"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
